center profile pics

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     }
 
     .team-text{
-      font-size: 12px;
+      font-size: 14px;
       letter-spacing: 0;
       color: #FFF !important;
       letter-spacing: none !important;
@@ -107,7 +107,7 @@
     }
 
     .team-text-2{
-      font-size: 12px;
+      font-size: 14px;
       letter-spacing: 0;
       color: #000 !important;
       letter-spacing: none !important;
@@ -184,14 +184,14 @@
   </section>
   <section id="requirements" class="w-100">
   </section>
-  <section id="team" class="w-100 h-100 my-5">
+  <section id="team" class="w-100 h-100 my-5 py-5">
     <h1 class="text-heading team-title">OUR TEAM</h1s>
     <div class="container p-5">
       <div class="row py-2"> 
         <!-- individual card -->
           <div class="team-card-bg p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/ayap.jpg" alt="ayap.jpg" class="img-fluid w-75 rounded-circle">
                 <h4 class="text-montserrat team-heading py-2">Ayap, Kathleen Shayne</h4>
                 <p class="text-montserrat team-text">Documentation Specialist</p>
@@ -214,7 +214,7 @@
         <!-- individual card 2 -->
           <div class="team-card-bg-2 p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/corales.jpg" alt="corales.jpg" class="img-fluid w-75 h-auto rounded-circle">
                 <h4 class="text-montserrat team-heading-2 py-2">Corales, Mark Reinell S.</h4>
                 <p class="text-montserrat team-text-2">Project Manager</p>
@@ -238,7 +238,7 @@
         <!-- individual card -->
           <div class="team-card-bg p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/cruz.jpg" alt="cruz.jpg" class="img-fluid w-75 rounded-circle">
                 <h4 class="text-montserrat team-heading py-2">Cruz, Ace Von Alfred L.</h4>
                 <p class="text-montserrat team-text">Data Analyst</p>
@@ -261,7 +261,7 @@
         <!-- individual card 2-->
           <div class="team-card-bg-2 p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/fajardo.jpg" alt="fajardo.jpg" class="img-fluid w-75 h-auto rounded-circle">
                 <h4 class="text-montserrat team-heading-2 py-2">Fajardo, Louise Kaye A.</h4>
                 <p class="text-montserrat team-text-2">Documentation Specialist II</p>
@@ -285,7 +285,7 @@
         <!-- individual card -->
           <div class="team-card-bg p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/mahinay.jpg" alt="mahinay.jpg" class="img-fluid w-75 rounded-circle">
                 <h4 class="text-montserrat team-heading py-2">Mahinay, Joanne Kaye F.</h4>
                 <p class="text-montserrat team-text">Data Analyst II</p>
@@ -311,7 +311,7 @@
         <!-- individual card 2-->
           <div class="team-card-bg-2 p-5">
             <div class="row">
-              <div class="col-md-4 text-center py-4">
+              <div class="col-md-4 text-center my-auto">
                 <img src="assets/images/individual/marilao.jpg" alt="marilao.jpg" class="img-fluid w-75 h-auto rounded-circle">
                 <h4 class="text-montserrat team-heading-2 py-2">Marilao, Justin Troy R.</h4>
                 <p class="text-montserrat team-text-2">Software Engineer</p>
