--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <a href="#examples" class="d-block text-montserrat toc-title pt-4 px-5">
           WHAT ARE THE FOUR BASIC OBJECT-ORIENTED PROGRAMMING AND EXAMPLES?
         </a>
-        <a href="#models" class="d-block text-montserrat toc-title pt-4 px-5">
+        <a href="#requirements" class="d-block text-montserrat toc-title pt-4 px-5">
           OBJECT-ORIENTED REQUIREMENTS MODELS
         </a>
         <a href="#team" class="d-block text-montserrat toc-title pt-4 px-5">
