add activity gallery

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
 
   <!-- Main -->
-  <section class="hero parallax-background bg-secondary py-5">
+  <section class="hero parallax-background bg-custom-gray py-5">
     <div class="h-100 text-center py-5">
       <div class="h-50 my-auto py-5">
         <h2 class="text-montserrat hero-subtitle mt-5">WELCOME TO OUR</h2>
@@ -34,7 +34,7 @@
       </div>
     </div>
   </section>
-  <section class="table-of-content parallax-background bg-secondary">
+  <section class="table-of-content parallax-background bg-custom-gray">
     <div class="h-100 text-center p-5">
       <div class="h-50 my-auto">
         <h1 class="text-heading">Table of Contents</h1s>
@@ -50,6 +50,9 @@
         <a href="#team" class="d-block text-montserrat toc-title pt-4 px-5">
           OUR TEAM
         </a>
+        <a href="#gallery" class="d-block text-montserrat toc-title pt-4 px-5">
+          ACTIVITY GALLERY
+        </a>
       </div>
     </div>
   </section>
@@ -61,7 +64,10 @@
   </section>
   <section id="requirements" class="w-100">
   </section>
-  <section id="team" class="w-100 h-100 my-5 py-5">
+  <section id="team" class="w-100 py-5">
+    
+  </section>
+  <section id="gallery" class="w-100 py-5 bg-custom-gray">
     
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
