--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id="team" class="w-100 py-5">
     
   </section>
-  <section id="gallery" class="w-100 py-5 bg-custom-gray">
+  <section id="gallery" class="w-100 h-auto py-5 bg-white">
     
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
