--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a href="#examples" class="px-5 pt-4 d-block text-montserrat toc-title">
           WHAT ARE THE FOUR BASIC OBJECT-ORIENTED PROGRAMMING AND EXAMPLES?
         </a>
-        <a href="#requirements" class="px-5 pt-4 d-block text-montserrat toc-title">
+        <a href="#oop-requirement-models" class="px-5 pt-4 d-block text-montserrat toc-title">
           OBJECT-ORIENTED REQUIREMENTS MODELS
         </a>
         <a href="#gallery" class="px-5 pt-4 d-block text-montserrat toc-title">
@@ -69,7 +69,7 @@
   <section id="examples" class="w-100">
   </section>
 
-  <section id="requirements" class="w-100">
+  <section id="oop-requirement-models" class="w-100 oop-requirement-models">
   </section>
   
   <section id="gallery" class="h-auto py-5 bg-white w-100">
