add scroll to top button and update class styles

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
+  <button id="scrollToTop" class="bg-custom-gray d-none">
+    <i class="bi bi-arrow-up" style="color: white;"></i>
+  </button>
+
   <header id="header" class="header">
     <!-- navigation -->
   </header>
@@ -59,22 +63,20 @@
 
   
   <section id="team" class="py-5 w-100">
-    
   </section>
 
-  <section id="oop" class="w-100 oop">
-
+  <section id="oop" class="w-100 h-100 oop bg-secondary">
   </section>
 
   <section id="examples" class="w-100">
   </section>
 
-  <section id="oop-requirement-models" class="w-100 oop-requirement-models">
+  <section id="oop-requirement-models" class="w-100 bg-secondary oop-requirement-models">
   </section>
   
-  <section id="gallery" class="h-auto py-5 bg-white w-100">
-    
+  <section id="gallery" class="h-auto py-5 bg-white w-100">  
   </section>
+  <!-- End main -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script
