add another team and optimize images

--- a/index.html
+++ b/index.html
@@ -68,13 +68,17 @@
   <section id="oop" class="w-100 h-100 oop bg-secondary">
   </section>
 
-  <section id="examples" class="w-100">
+  <section id="examples" class="w-100 oop_examples bg-dark">
   </section>
 
   <section id="oop-requirement-models" class="w-100 bg-secondary oop-requirement-models">
   </section>
   
   <section id="gallery" class="h-auto py-5 bg-white w-100">  
+  </section>
+
+  <section id="footer" class="py-5 text-center w-100 bg-dark">
+    <p class="text-montserrat team-text">You can find the public github repo <a href="https://github.com/medinzz/oop-finals" target="_blank">here</a></p>
   </section>
   <!-- End main -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
