--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
   </section>
 
   
-  <section id="team" class="py-5 w-100">
+  <section id="team" class="h-auto py-5 w-100">
   </section>
 
-  <section id="oop" class="w-100 h-100 oop bg-secondary">
+  <section id="oop" class="h-auto w-100 oop bg-secondary parallax-background">
   </section>
 
-  <section id="examples" class="w-100 oop_examples bg-dark">
+  <section id="examples" class="h-auto w-100 oop_examples bg-dark parallax-background">
   </section>
 
-  <section id="oop-requirement-models" class="w-100 bg-secondary oop-requirement-models">
+  <section id="oop-requirement-models" class="h-auto w-100 bg-secondary oop-requirement-models parallax-background">
   </section>
   
   <section id="gallery" class="h-auto py-5 bg-white w-100">  
