add space on footer

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <section id="gallery" class="h-auto py-5 bg-white w-100">  
   </section>
 
-  <section id="footer" class="py-5 text-center w-100 bg-dark">
-    <p class="text-montserrat team-text">You can find the public github repo <a href="https://github.com/medinzz/oop-finals" target="_blank">here</a></p>
+  <section id="footer" class="py-5 text-center w-100 bg-dark h-25">
+    <p class="py-5 text-montserrat team-text">You can find the public github repo <a href="https://github.com/medinzz/oop-finals" target="_blank">here</a></p>
   </section>
   <!-- End main -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
