--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="gallery" class="h-auto py-5 bg-white w-100">  
   </section>
 
-  <section id="footer" class="py-5 text-center w-100 bg-dark h-25">
+  <section id="footer" class="h-auto py-5 text-center w-100 bg-dark">
     <p class="py-5 text-montserrat team-text">You can find the public github repo <a href="https://github.com/medinzz/oop-finals" target="_blank">here</a></p>
   </section>
   <!-- End main -->
